...
import com.google.android.gms.auth.api.signin.GoogleSignInOptions
import com.yandex.authsdk.YandexAuthLoginOptions
import com.yandex.authsdk.YandexAuthOptions
import com.yandex.authsdk.YandexAuthResult
import com.yandex.authsdk.YandexAuthSdk

const val AUTH_EMAIL_FIELD_TEST_TAG = "auth_email_field"
const val AUTH_PASSWORD_FIELD_TEST_TAG = "auth_password_field"
const val AUTH_CONFIRM_PASSWORD_FIELD_TEST_TAG = "auth_confirm_password_field"
const val AUTH_SIGN_IN_BUTTON_TEST_TAG = "auth_sign_in_button"
const val AUTH_SIGN_UP_BUTTON_TEST_TAG = "auth_sign_up_button"
const val AUTH_GOOGLE_SIGN_IN_BUTTON_TEST_TAG = "auth_google_sign_in_button"
const val AUTH_YANDEX_SIGN_IN_BUTTON_TEST_TAG = "auth_yandex_sign_in_button"
const val AUTH_ERROR_MESSAGE_TEST_TAG = "auth_error_message"

private enum class AuthMode {
    SignIn,
    SignUp
}
...
